--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,34 @@
+.titulo{
+    background-color: rgb(9, 137, 137);
+    color: black;
+    border: 6px;
+    font-size: 25px;
+    padding: 20px;
+    text-align: left;
+}
+.contenedor{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+body{
+    background-color: rgb(49, 137, 137);
+}
 a {
     text-decoration: none;
     color: black;
   }
 .mi-lista{
     list-style-type: none;
-    padding: 0;
+    padding: 5px;
+    border:5px solid black ;
+    display: flex;
 }
+.mi-lista > div{
+    flex: 1;
+}
+
 .mi-lista{
     margin: 10px 0;
 }
